// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tab State > should render "active" tab state 1`] = `
<div>
  <span
    class="flex flex-row gap-1"
  />
</div>
`;

exports[`Tab State > should render "audible" tab state 1`] = `
<div>
  <span
    class="flex flex-row gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume2 lucide-volume-2 size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
  </span>
</div>
`;

exports[`Tab State > should render "discarded" tab state 1`] = `
<div>
  <span
    class="flex flex-row gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-trash size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
      />
      <path
        d="M3 6h18"
      />
      <path
        d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
      />
    </svg>
  </span>
</div>
`;

exports[`Tab State > should render "frozen" tab state 1`] = `
<div>
  <span
    class="flex flex-row gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-snowflake size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m10 20-1.25-2.5L6 18"
      />
      <path
        d="M10 4 8.75 6.5 6 6"
      />
      <path
        d="m14 20 1.25-2.5L18 18"
      />
      <path
        d="m14 4 1.25 2.5L18 6"
      />
      <path
        d="m17 21-3-6h-4"
      />
      <path
        d="m17 3-3 6 1.5 3"
      />
      <path
        d="M2 12h6.5L10 9"
      />
      <path
        d="m20 10-1.5 2 1.5 2"
      />
      <path
        d="M22 12h-6.5L14 15"
      />
      <path
        d="m4 10 1.5 2L4 14"
      />
      <path
        d="m7 21 3-6-1.5-3"
      />
      <path
        d="m7 3 3 6h4"
      />
    </svg>
  </span>
</div>
`;

exports[`Tab State > should render "highlighted" tab state 1`] = `
<div>
  <span
    class="flex flex-row gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-highlighter size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m9 11-6 6v3h9l3-3"
      />
      <path
        d="m22 12-4.6 4.6a2 2 0 0 1-2.8 0l-5.2-5.2a2 2 0 0 1 0-2.8L14 4"
      />
    </svg>
  </span>
</div>
`;

exports[`Tab State > should render "muted" tab state 1`] = `
<div>
  <span
    class="flex flex-row gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume-off size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 9a5 5 0 0 1 .95 2.293"
      />
      <path
        d="M19.364 5.636a9 9 0 0 1 1.889 9.96"
      />
      <path
        d="m2 2 20 20"
      />
      <path
        d="m7 7-.587.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298V11"
      />
      <path
        d="M9.828 4.172A.686.686 0 0 1 11 4.657v.686"
      />
    </svg>
  </span>
</div>
`;

exports[`Tab State > should render "pinned" tab state 1`] = `
<div>
  <span
    class="flex flex-row gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-pin size-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 17v5"
      />
      <path
        d="M9 10.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V7a1 1 0 0 1 1-1 2 2 0 0 0 0-4H8a2 2 0 0 0 0 4 1 1 0 0 1 1 1z"
      />
    </svg>
  </span>
</div>
`;
